--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,12 +25,11 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Install Python
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.9
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Run Python Script
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          print("Hello, world!")
