--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,5 +26,10 @@ jobs:
         with:
           python-version: 3.9
 
+      - name: Python Dependency Installation
+        uses: py-actions/py-dependency-install@v4.0.0
+        with:
+          ./requirements.txt
+
       - name: Run Python Script
         run: python3 ./script.py
