--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Python Dependency Installation
         uses: py-actions/py-dependency-install@v4.0.0
         with:
-          ./requirements.txt
+          path: "./requirements.txt"
 
       - name: Run Python Script
         run: python3 ./script.py
