--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,11 +25,8 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-
-      - name: Python Dependency Installation
-        uses: py-actions/py-dependency-install@v4.0.0
-        with:
-          path: "./requirements.txt"
+          cache: 'pip'
+      - run: pip install -r ./requirements.txt
 
       - name: Run Python Script
         run: python3 ./script.py
